# aegis-router

./: .gitignore  AGENTS.md  OPTIMIZATION.md  PROJECT_NEXT.md  README.md  aegis_state_grid.json  eval_harness.py  eval_output.txt  final_stats.txt  grid_results.tsv  optimal_run.txt  plot_graph.py  pyproject.toml  requirements.txt  run_eval.sh  run_grid.sh  run_optimal.sh
.arbor/daemon/: last-message.md
.github/workflows/: tests.yml
aegis-router/: run_optimal.sh
aegis_router/: __init__.py  agent.py  daemon.py  demo.py  event_demo.py  event_sim.py  graph.py  packet.py  postquantum_crypto.py  repulink.py  sim.py  solvers.py
aegis_router/auto_opt/: reward.py  trainer.py  utils.py
deploy/systemd/: aegis-arbor.service
docs/: ARBOR_DAEMON.md
profiles/: aegis-global-edge-v2.json  aegis-global-edge-v3.json  aegis-prod-edge-v1.json
scripts/: adversarial_benchmark.py  arbor_daemon.sh  arbor_daemon_prompt.md  heavy_secure_search.py  real_network_benchmark.py  refine_edge_multiscenario.py
tests/: test_adaptive_risk_solver.py  test_adversarial_benchmark.py  test_churn_and_scale.py  test_daemon_local.py  test_drop_reasons_and_drain.py  test_dynamics.py  test_edge_learning.py  test_eigentrust.py  test_event_sim.py  test_hybrid_integration.py  test_hybrid_scorer.py  test_link_liveness.py  test_loop_avoidance.py  test_oracle_free_routing.py  test_persistent_learning.py  test_postquantum_crypto.py  test_progress_and_retries.py  test_real_network_benchmark.py  test_reason_aware_learning.py  test_repulink.py  test_risk_aware_solver.py  test_router.py
(+380 files in other folders)
