[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-router"
version = "0.1.0"
description = "Lightweight MARL prototype for anonymous P2P routing"
requires-python = ">=3.11"
authors = [{name = "iroic"}]
license = {text = "MIT"}

[project.scripts]
aegis-router-demo = "aegis_router.demo:main"
